--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links links
-main:
-  - title: "Research"
-    url: /research/
-
-  - title: "Teaching"
-    url: /teaching/    
+#main:
+#  - title: "Research"
+#    url: /research/
+#
+#  - title: "Teaching"
+#    url: /teaching/    
